--- a/snake_ladder.css
+++ b/snake_ladder.css
@@ -65,3 +65,9 @@ button{
    background-color: tomato;
    color: black;
 }
+
+#div_dice{
+    font-size: xx-large;
+    padding: 10px;
+    margin: 10px;
+}
