--- a/snake_ladder.css
+++ b/snake_ladder.css
@@ -6,6 +6,11 @@ body{
     text-align: center;
     color: #F44336;
 }
+#heading{
+    background-color: antiquewhite;
+    font-size: xx-large;
+    padding: 20px;
+}
 #bodyp1{
     background-color:#FFEB3B;
     color: #FF6F00;
@@ -55,13 +60,14 @@ body{
 #strt{
    height: 80px;
    width: 500px;
-   font-size: x-large;   
+   font-size: x-large; 
+   margin-top: 50px;  
 }
 button{
-   height: 80px;
+   height: 60px;
    font-size: large;
    border-color: transparent;
-   margin-left: 10px;
+   margin: auto;
    background-color: tomato;
    color: black;
 }
@@ -70,4 +76,21 @@ button{
     font-size: xx-large;
     padding: 10px;
     margin: 10px;
+}
+
+.main_div img{
+    margin: 10px;
+}
+.restart_btn{
+    font-size: 80px;
+    height: fit-content;
+    color: grey;
+    background-color: honeydew;
+    cursor: pointer;
+    padding: 10px;
+}
+.restart_btn:hover{
+    background-color: gray;
+    color: white;
+
 }
